# subtitle-generator

./: .gitignore  Cargo.toml  README.md
assets/: appicon.icns
scripts/: build_app.sh  prepare_ffmpeg.sh
src/: config.rs  lib.rs  main.rs  main_cli.rs  model.rs  utils.rs
src/cli/: args.rs
src/config/: mod.rs  models.rs
src/gui/: app.rs  mod.rs
src/media/: audio.rs  mod.rs  subtitle.rs
src/whisper/: mod.rs  model.rs  transcribe.rs
