[package]
name = "video-subtitle"
version = "0.1.0"
edition = "2021"

[dependencies]
whisper-rs = "0.14.2"
hound = "3.5.1"
clap = { version = "4.5.37", features = ["derive"] }
anyhow = "1.0.98"
toml = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
directories = "5.0.1"
reqwest = { version = "0.11", features = ["blocking", "stream"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.8"
futures-util = "0.3.30"
